--- a/src/components/RandomPage/RandomPage.css
+++ b/src/components/RandomPage/RandomPage.css
@@ -6,7 +6,6 @@
     align-items: center;
     gap: 5px;
     font-family: 'Josefin Sans', sans-serif;
-    font-weight: 300;
     font-size: 12px;
     line-height: 12px;
     color: #208A10;
